--- a/konva_practice/package.json
+++ b/konva_practice/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.3",
+    "http-proxy-middleware": "^2.0.6",
     "konva": "^8.4.2",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.4",
@@ -46,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://clovagreeneye.apigw.ntruss.com/"
 }
