--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-color-extractor": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.5",
+    "react-konva-utils": "^0.3.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
