--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "FileReader": "^0.10.2",
     "gsap": "^3.11.4",
     "konva": "^8.4.2",
     "react": "^18.2.0",
